--- a/assignment4/src/main/resources/templates/admin/myBook.html
+++ b/assignment4/src/main/resources/templates/admin/myBook.html
@@ -4,8 +4,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
   <meta charset="utf-8">
 
-  <title>Books management</title>
-
+  <title>My Books</title>
   <link href="/resources/css/bootstrap.min.css" rel="stylesheet">
   <link href="/resources/css/bootstrap-theme.css" rel="stylesheet">
   <link href="/resources/css/elegant-icons-style.css" rel="stylesheet" />
@@ -46,34 +45,26 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <body>
 <input id="checkUser" type="hidden" sec:authorize="hasAnyRole('ROLE_USER')" value="isUser"/>
-  <!-- container section start -->
   <section id="container" class="">
-    <!--header start-->
     <header class="header dark-bg">
       <div class="toggle-nav">
         <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i class="icon_menu"></i></div>
       </div>
 
-      <!--logo start-->
       <a href="/" class="logo">Books <span class="lite"> Management</span></a>
-      <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
-        <!--  search form start -->
         <ul class="nav top-menu">
           <li>
-            <form class="navbar-form">
-              <input class="form-control" placeholder="Search" type="text">
+            <form class="navbar-form" id="formSearch" name="formSearch">
+              <input id="keyword" class="form-control" placeholder="Search" type="text">
             </form>
           </li>
         </ul>
-        <!--  search form end -->
       </div>
 
       <div class="top-nav notification-row">
-        <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
-          <!-- user login dropdown start-->
           <li class="dropdown" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
@@ -83,7 +74,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
-              <!-- <div class="log-arrow-up"></div> -->
                <li class="eborder-top">
                 <a href="#" onclick="showEditUserLogin()"><i class="icon_profile"></i>MY PROFILE</a>
               </li>
@@ -95,17 +85,12 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
               </li>
             </ul>
           </li>
-          <!-- user login dropdown end -->
         </ul>
-        <!-- notificatoin dropdown end-->
       </div>
     </header>
-    <!--header end-->
 
-    <!--sidebar start-->
    <aside sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
       <div id="sidebar" class="nav-collapse ">
-        <!-- sidebar menu start-->
         <ul class="sidebar-menu" >
           <li class="" sec:authorize="hasAnyRole('ROLE_ADMIN')">
             <a class="" href="/admin/allUser">
@@ -133,20 +118,14 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
           </li>
 
         </ul>
-        <!-- sidebar menu end-->
       </div>
     </aside>
 
-    <!--main content start-->
     <section id="main-content">
       <section class="wrapper">
        <div class="row">
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-book"></i>MyBooks management</h3>
-            <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="/">Home</a></li>
-              <li><i class="fa fa-book"></i>My book</li>
-            </ol>
           </div>
         </div>
         <div class="row">
@@ -157,7 +136,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
              	 <a class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('viewFormAddMyBook').style.display='block'"><i class="icon_plus_alt2"></i> ADD NEW BOOK</a>   
 				<br>
 			</div>
-			<br>
              <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;"></div><br>
               <div id="result">
               <table class="table table-striped table-advance table-hover" id = "resultMyBook">
@@ -173,7 +151,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
         <!-- page end-->
          <div class="row">
         <div class="form-group col-md-1">
-            <select class="form-control pagination" id="pageSizeSelect">
+            <select class="form-control pagination" id="pageSizeSelect" onclick="changePageAndSize()">
                 <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
                         th:selected="${pageSize} == ${selectedPageSize}"></option>
             </select>
@@ -185,116 +163,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     </section>
   </section>
   
-  <div id="viewFormAddMyBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
-           <form class="modal-content animate" id="formAddMyBook"  name="formAddMyBook">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormAddMyBook').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>ADD NEW BOOK</h3><br>
-        <table style=" width:100%"  class="">
-        <tr>
-          <td><label ><b>Title<span style="color: red">(*)</span></b></label></td>
-          <td><input autofocus type="text" name="title" id="title" class="form-control" autocomplete="title"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Author<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="author" id="author" class="form-control" autocomplete="author"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Description</b></label></td>
-          <td>
-          	<textarea style="margin: 0px; height: 200px;" name="description" cols="30" id="description" class="form-control"></textarea>
-          </td>    
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="ADD BOOK" class="btn btn-primary">
-            <input type="reset" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormAddMyBook').style.display='none'">
-            
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
-    
-     <div id="viewFormEditMyBook" class="modal text-center" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
-           <form class="modal-content animate" id="formEditMyBook"  name="formEditMyBook">
-           <div class="">
-						<button type="button" class="close" onclick="document.getElementById('viewFormEditMyBook').style.display='none'" >&times;</button>
-			</div> 
-           <br><h3>EDIT BOOK</h3><br>
-        <table style=" width:100%"  class="">
-         <tr>
-          <td><input type="hidden" id="idBookEdit" name="idBookEdit" autocomplete="idBookEdit"></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><input type="hidden" id="idUserBookEdit" name="idUserBookEdit" autocomplete="idUserBookEdit"></td>
-          <td><br></td>
-         </tr>
-        <tr>
-          <td><label ><b>Title<span style="color: red">(*)</span></b></label></td>
-          <td><input autofocus type="text" name="titleEdit" id="titleEdit" class="form-control" autocomplete="titleEdit"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Author<span style="color: red">(*)</span></b></label></td>
-          <td><input type="text" name="authorEdit" id="authorEdit" class="form-control" autocomplete="authorEdit"></td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td><label><b>Description</b></label></td>
-          <td>
-          	<textarea style="margin: 0px; height: 200px;" name="descriptionEdit" cols="30" id="descriptionEdit" class="form-control"></textarea>
-          </td>    
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-         <tr>
-          <td></td>
-          <td>
-            <input type="submit" value="UPDATE" class="btn btn-primary">
-            <input type="reset" value="CANCEL" class="btn btn-danger"
-              onclick="document.getElementById('viewFormEditMyBook').style.display='none'">
-            
-          </td>
-         </tr>
-          <tr>
-          <td><br></td>
-          <td><br></td>
-         </tr>
-        </table>
-       </form>
-    </div>
+	<th:block th:include="/inc/formEditAddMyBook"></th:block>
  	<th:block th:include="/inc/formEditUserLogin"></th:block>
     <th:block th:include="/inc/formChangePasswordUserLogin"></th:block> 
-  <!-- container section end -->
   <script src="/resources/js/jquery.js"></script>
   <script src="/resources/js/jquery.validate.min.js" type="text/javascript"></script>
   <script src="/resources/js/bootstrap.min.js"></script>
@@ -306,7 +177,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <script src="/resources/js/validate.js" type="text/javascript"></script>
   <script src="/resources/js/jsonUser.js" type="text/javascript"></script>
   <script src="/resources/js/jsonMyBook.js" type="text/javascript"></script>
-  <script src="/resources/js/pageMyBook.js" type="text/javascript"></script>  
 </body>
 
 </html>
