--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Users management 3</title>
+  <title>Users management</title>
 
   <link href="/resources/css/bootstrap.min.css" rel="stylesheet">
   <link href="/resources/css/bootstrap-theme.css" rel="stylesheet">
   <link href="/resources/css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="/resources/css/font-awesome.min.css" rel="stylesheet" />
   <link href="/resources/css/style.css" rel="stylesheet">
   <link href="/resources/css/style-responsive.css" rel="stylesheet" />
 <style>
